# selenium-vs-playwright

./: Readme.md  env.py  main.py  pyproject.toml
helper/: timer.py
scripts/: playwright.py  scraper.py  selenium.py
